--- a/helm/cert-status-exporter/values.yaml
+++ b/helm/cert-status-exporter/values.yaml
@@ -8,6 +8,7 @@ certManagerDeployment:
 
     image:
       repository: mmaugust/cert-status-exporter
+      tag: latest
       pullPolicy: IfNotPresent
       command: ["./app"]
       args:
@@ -105,7 +106,7 @@ rbac:
     annotations: {}
     # The name of the service account to use.
     # If not set and create is true, a name is generated using the fullname template
-    name: cert-exporter
+    name: cert-status-exporter
 
   clusterRole:
     # New role to grant to the service account
