--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: mmaugust/cert-status-exporter:latest
+          tags: mmaugust/cert-status-exporter:test
