--- a/helm/cert-status-exporter/Chart.yaml
+++ b/helm/cert-status-exporter/Chart.yaml
@@ -3,5 +3,7 @@ name: cert-status-exporter
 description: Monitors and exposes PKI information as Prometheus metrics including expiriation time of certificates in secrets and the status of the parent Certificate object
 
 type: application
-version: 1.0.1
+version: 1.0.2
 appVersion: v1.0.1
+
+# 1.0.2 - Add default prometheus rules
